--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -38,6 +38,6 @@ jobs:
         HEROKU_API_TOKEN: ${{ secrets.HEROKU_API_TOKEN }}        
       if: job.status == 'success'
       run: |
-        git fetch --prune --unshallow
+        #git fetch --prune --unshallow
         git remote add heroku https://heroku:$HEROKU_API_TOKEN@git.heroku.com/price-opt-dash.git
         git push heroku HEAD:master -f
