--- a/requirements.txt
+++ b/requirements.txt
@@ -2,13 +2,14 @@ dash
 pandas
 numpy
 dash_table
+logging
 plotly.express
-# dash_core_components
-# dash_html_components
-# dash_bootstrap_components
-# dash.dependencies
+dash_core_components
+dash_html_components
+dash_bootstrap_components
+dash.dependencies
 dash_daq
 # matplotlib.pyplot
-seaborn
+# seaborn
 # statsmodels.formula.api
 gunicorn
