--- a/requirements.txt
+++ b/requirements.txt
@@ -4,11 +4,15 @@ numpy
 dash_table
 # logging
 plotly.express
-dash_core_components
-dash_html_components
-dash_bootstrap_components
-dash.dependencies
-dash_daq
+# dash_core_components
+# dash_html_components
+# dash_bootstrap_components
+# dash.dependencies
+# dash_daq
+dash-bootstrap-components==0.13.0
+dash-core-components==1.17.1
+dash-daq==0.5.0
+dash-html-components==1.1.4
 # matplotlib.pyplot
 # seaborn
 # statsmodels.formula.api
