--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ dash_table
 # logging
 plotly
 plotly.express
+matplotlib
 # dash_core_components
 # dash_html_components
 # dash_bootstrap_components
